Refactor profile page layout and adjust select box height for better responsiveness

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -208,7 +208,7 @@ main {
 
 select[multiple] {
   overflow-y: hidden; /* Hides vertical scrollbar */
-  height: 150px; /* Set fixed height */
+  height: fit-content; /* Set fixed height */
 }
 
 .rounded-35 {
