Done Homeworks and Tests pages

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,7 +170,8 @@ main {
 }
 
 .home-hero {
-  height: 160px;
+  min-height: 160px;
+  padding: 20px 0;
 }
 
 .hero-img {
@@ -345,7 +346,7 @@ select[multiple] {
 }
 
 .exercise-menu {
-  min-height: calc(100vh - 103px - 160px - (1.5rem * 3));
+  min-height: calc(100vh - 103px - 160px - (1.5rem * 5));
 }
 
 .btn-exercise {
@@ -362,4 +363,54 @@ select[multiple] {
 
 .btn-exercise:active {
   background-color: var(--bg-color) !important;
+}
+
+.btn-back {
+  color: black;
+}
+
+.btn-back:hover {
+  color: var(--primary-color);
+}
+
+.underline-hover {
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid transparent;
+}
+
+.underline-hover:hover {
+  border-color: var(--primary-color); /* Change to desired color */
+}
+
+.table-custom thead {
+  background-color: var(--bg-color) !important;
+  color: black; /* Text color */
+}
+
+.table-custom th {
+  background-color: inherit !important;
+}
+
+.table-custom {
+  border-spacing: 0 10px;
+  border-collapse: separate;
+}
+
+.table-custom td {
+  border: 0;
+  background-color: inherit !important;
+}
+
+.table-custom tbody tr {
+  background-color: #ededed;
+}
+
+.table-custom td:first-child,
+.table-custom th:first-child {
+  border-radius: 10px 0 0 10px;
+}
+.table-custom td:last-child,
+.table-custom th:last-child {
+  border-radius: 0 10px 10px 0;
 }
