Done Absence History page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -469,6 +469,7 @@ select[multiple] {
 
 .pagination {
   gap: 12px;
+  margin: 0;
 }
 
 .pagination .disabled > a {
@@ -478,4 +479,14 @@ select[multiple] {
 
 .w-40 {
   width: 40px;
+}
+
+select option:checked {
+  background-color: transparent !important;
+  color: black !important;
+}
+
+.custom-select[multiple]:focus option:checked {
+  background: var(--primary-color)
+    linear-gradient(0deg, var(--primary-color) 0%, var(--primary-color) 100%);
 }
