Enhance hero section styling with zoom effect and adjust layout for consistency

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -154,6 +154,10 @@ main {
   .table-big th {
     padding: 7px !important;
   }
+
+  .zoom {
+    zoom: 0.8;
+  }
 }
 
 @media (min-width: 991.98px) {
@@ -175,8 +179,9 @@ main {
 }
 
 .home-hero {
-  min-height: 160px;
-  padding: 20px 0;
+  height: 100%;
+  max-height: 160px;
+  padding: 20px;
 }
 
 .hero-img {
