--- a/public/css/style.css
+++ b/public/css/style.css
@@ -495,4 +495,4 @@ select option:checked {
     linear-gradient(0deg, var(--primary-color) 0%, var(--primary-color) 100%);
 }
 
-/* test commit */
+/* test commit 1 */
