--- a/public/css/style.css
+++ b/public/css/style.css
@@ -574,3 +574,11 @@ select option:checked {
 .min-w-0 {
   min-width: 0;
 }
+
+.session-id {
+  background-color: rgba(0, 0, 0, 0.25);
+  border: 1px solid #8e8e8e;
+  border-radius: 10px;
+  padding: 7px 35px;
+  width: max-content;
+}
