--- a/public/css/style.css
+++ b/public/css/style.css
@@ -582,3 +582,9 @@ select option:checked {
   padding: 7px 35px;
   width: max-content;
 }
+
+.btn-custom {
+  border: none !important; /* Remove default border */
+  box-shadow: none !important; /* Remove focus outline */
+  outline: none !important; /* Remove additional focus styles */
+}
