Done @haimy02 request for increasing size of red banner and change text to Dung English Speaking

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -179,13 +179,13 @@ main {
 }
 
 .home-hero {
-  max-height: 200px;
+  min-height: 200px;
   padding: 20px;
 }
 
 .hero-img {
-  width: auto;
-  height: calc(100% - 20px);
+  width: 270px;
+  height: auto;
   object-fit: contain;
 }
 
